--- a/abstract.tex
+++ b/abstract.tex
@@ -37,19 +37,19 @@
 
 \section{Introductory para (200 words approx)}
 
-Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by an increase in male to female alcohol-related cases, and is absent from male to male, female to male, and female to female domestic abuse cases. We find similar patterns in other violent crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. 
+Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory in a national football tournament (World Cup, European Championship). This effect is specific to alcohol related incidents, with no detectable increase in non-alcohol related incidents. The effect is driven by an increase in male to female alcohol-related cases, and is absent from male to male, female to male, and female to female domestic abuse cases. We find similar patterns in other violent crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours following the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. 
 
 \section{Long intro}
 
-"If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While the link betwen sport events and domestic abuse has been the focus of a number of smaller studies\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV) in the US\autocite{Card2011}. 
+"If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While the link between sport events and domestic abuse has been the focus of a number of smaller studies\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV) in the US\autocite{Card2011}. 
 
-In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of viewers \autocite{BBC}. In 2012, a small, exploratory study investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England\autocite{Brimicombe2012}. Using a control period from 2009, the study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour, involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
+In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of viewers \autocite{BBC}. In 2012, a small, exploratory study investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England\autocite{Brimicombe2012}. Using a control period from 2009, the study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. A more specific investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use war references and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}.  Previous qualtitatve research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the heightened sense of national consciousness.
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use war references and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}. Previous qualtitatve research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the heightened sense of national consciousness.
 
 Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is never the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol suggest that for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. 
 
-In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. While England-based quantitative studies did not look at the role of alcohol in particular, given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol play an important role in the relationship between national football tournaments and domestic abuse.
+In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. While England-based quantitative studies did not look at the role of alcohol in particular. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol play an important role in the relationship between national football tournaments and domestic abuse.
 
 To explore this hypothesis, we investigate whether the number of reported domestic abuse cases recorded by the West Midland Police in England between 2010 and 2018 increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, is affected by alcohol-involvement in the reported case. We also consider whether the result of the match alters the relationship, as previous research suggested that the effect is heightened when England loses\autocite{Kirby2014}. Our unique dataset further allows us to investigate various aspects of the link between football tournaments and domestic abuse.
 
@@ -58,9 +58,9 @@ To explore this hypothesis, we investigate whether the number of reported domest
 
 \subsection{Data description}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. \textcolor{red}{Sentence about daily rate and how it compares to previous studies}. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. Both tournaments take place in the months of June and July.
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. \textcolor{red}{Sentence about daily rate and how it compares to previous studies}. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
 
-In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research have mostly focused on IPV, which the largest subcategory of domestic abuse. 
+In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research has mostly focused on IPV, which the largest subcategory of domestic abuse. 
 
 
 \begin{table}[ht]
@@ -103,9 +103,9 @@ Our dataset contains all cases of domestic abuse that have been reported to the 
 
 In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate whether national football tournaments affect the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
 
-Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. 
+Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. \TM{Should we comment on the lack of effect for draws and losses?}
 
-Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase on days following an England match day, potentially the result of a temporal spillover effect of the match, and an 8\%, 95\% CI [2-14] decrease in alcohol-related incidents during tournament days that are not England match days, or days after an England match days. \AT{I find this a bit puzzling}
+Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase on days following an England match day, potentially the result of a temporal spillover effect of the match, and an 8\%, 95\% CI [2-14] decrease in alcohol-related incidents during tournament days that are not England match days, or days after an England match days. \AT{I find this a bit puzzling} \TM{People do all their drinking on days when the matches are on, and are then hungover/working the other days? Repeat perpetrators still being in a cell the next day? I don't think we necessarily need to provide an explanation}
 
 
 
@@ -223,7 +223,7 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
 
 Our unique dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (including burglary, theft and robbery), public order offences (behaviours that cause offence to the general public), hate crimes (hate incidents and any other racially or religiously aggravated crime), and other violent crimes (excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family relationships.
 
-Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after and England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from Male to Female cases (although Male to Male and Female to Male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol only make men more violent and mostly towards women. \AT{Is this too harsh? I added this analysis because I think it strengthens our point about how football makes men more violent. Also I wonder why they would beat up women they don't know - can be a result of the noisiness of the DA indicator?}
+Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after and England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from Male to Female cases (although Male to Male and Female to Male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol only make men more violent and mostly towards women. \AT{Is this too harsh? I added this analysis because I think it strengthens our point about how football makes men more violent. Also I wonder why they would beat up women they don't know - can be a result of the noisiness of the DA indicator?} \TM{I think this is very good}
 
 
 
@@ -300,7 +300,7 @@ Figure \ref{fig:threehours} shows a plot of the coefficients from these negative
 
 \section{Discussion}
 
-While only 23\% of all domestic abuse cases are alcohol-related in our dataset, the estimated effect of a 60\% increase in alcohol-related domestic abuse cases is large, translating into a 0.42 increase in the daily rate of \textit{reported} alcohol-related domestic abuse cases per 100,000 individuals. Our results constitute the first quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England, and that the effect is exclusively limited to male-perpetrated domestic abuse. The effect is about 70\% of a Christmas effect on alcohol-related domestic abuse. \AT{OR This estimate is comparable to a 89\% increase in alcohol-related domestic abuse cases at Christmas?.}
+While only 23\% of all domestic abuse cases are alcohol-related in our dataset, the estimated effect of a 60\% increase in alcohol-related domestic abuse cases is large, translating into a 0.42 increase in the daily rate of \textit{reported} alcohol-related domestic abuse cases per 100,000 individuals. Our results constitute the first quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England, and that the effect is exclusively limited to male-perpetrated domestic abuse. The effect is about 70\% of a Christmas effect on alcohol-related domestic abuse. \AT{OR This estimate is comparable to a 89\% increase in alcohol-related domestic abuse cases at Christmas?.} \TM{I don't think most people would associate Christmas with huge increases in DA. I think this summary is already really strong without this comparison}
  
 
 Our findings show both similarities and differences with results from previous quantitative investigations. Similarly to a previous study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. However, in the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses, whereas our findings suggest that it is a victory that results in the largest increase, and that alcohol plays an instrumental role in the relationship between football and domestic abuse. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect on sports-induced emotional cues on domestic abuse are sensitive to the cultural context. 
@@ -311,19 +311,19 @@ Based on the pre-match betting odds, all England victories were expected in our 
 
 The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a markedly different pattern, in that it is when England wins we find a substantial increase in alcohol-related domestic abuse, whereas we found no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws (probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw). A stark difference between our results is the lack of an England loss effect in our sample. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling given that these are \textit{national} football tournament matches.
 
-To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix).
+To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). \TM{Do we also want to emphasize the differnce in sample size, and representativeness between west mids and Lancashire?}
 
 
 Does this effect generalise to other sporting events, or is it specific to football?
-It has been suggested previously that popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), which might stem from differences in media coverage and audience numbers between the two tournaments.  
+It has been suggested previously that popular sports, such as rugby have similar links with domestic abuse\autocite{Brooks-Hay2018}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. Since the Six Nations takes place every year with 15 matches for each team as opposed to the World Cup and the European Championship, which are relatively rare, we have many more days when England lost or won. The results show no comparable effects for rugby matches (see Table \ref{rugby} in the Appendix), which might stem from differences in media coverage and audience numbers between the two tournaments.  \TM{Is it worth including a citation that Rugby is the second most watched sport after football? American reviewers may never have heard of it and assume it is too niche}
 
 We also investigated whether similar patterns are also present in other types of crimes, which are similar to domestic abuse in nature. Specifically, we explored how England's participation in national football tournaments affects alcohol and non-alcohol related reported sexual offences and other types of abuse (child abuse, vulnerable adult abuse). The results show no effect on the number of reported sexual offences, and a slight increase in the number of reported other cases when the tournament is on (see Table \ref{otherabuse} in the Appendix). 
 
-Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (in the sense that there was no earlier reported case with the same victim and offender in our dataset), happen inside (in a residential dwelling) as opposed to a public location, or result in an injury. We find no evidence that cases reported on England match days are more likely to be newly reported cases (see Table \ref{Characteristics1} in the Appendix). It could be argued that on England match days, cases of domestic abuse are more likely to happen outside and subsequently get reported compared to non-match days, due to the huge number of fans congregating in pubs. Interestingly, reported cases are more likely to happen in public on England lost days but not on England win days, and this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England lost days are also more likely to result in injury, a pattern that is absent in alcohol-related cases.
+Our data allows us to explore the characteristics of alcohol-related domestic abuse cases reported on England match days. First, using a series of logistic regressions, we investigate whether these cases are more likely to be newly reported (in the sense that there was no earlier reported case with the same victim and offender in our dataset), happen inside (in a residential dwelling) as opposed to a public location, or result in an injury. We find no evidence that cases reported on England match days are more likely to be newly reported cases (see Table \ref{Characteristics1} in the Appendix). It could be argued that on England match days, cases of domestic abuse are more likely to happen outside and subsequently get reported compared to non-match days, due to the large number of fans congregating in pubs. Interestingly, reported cases are more likely to happen in public on England lost days but not on England win days, and this effect does not differ by alcohol-involvement in the case. Non-alcohol related cases reported on England lost days are also more likely to result in injury, a pattern that is absent in alcohol-related cases.
 
 Next we turn to repeated cases (multiple cases with the same victim-offender pair). We are interested in whether the number of days elapsed between two consecutive cases is affected by England football matches. For example, it is possible that England match days bring reported cases of domestic abuse forward, which would have otherwise happened at a later point in time. To investigate this question, we run two negative binomial regressions, where the outcome variable is the number of days elapsed since the last reported case and the number of days until the next case. 
 
-The results show that non-alcohol related cases perpetrated on England loss days are slightly more likely to occur sooner after the previous incident, compared to repeat cases happening on non-match days, but only for non-alcohol related incidents (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England match days or after and England match, and alcohol-related cases on an England draw day are more likely to be reported sooner.
+The results show that non-alcohol related cases perpetrated on England loss days are slightly more likely to occur sooner after the previous incident, compared to repeat cases happening on non-match days, but only for non-alcohol related incidents (see Table \ref{Characteristics2} in the Appendix). Non-alcohol related domestic abuse cases perpetrated on England win days are more likely to be followed by another case of abuse sooner, compared to cases occurring on non-match days, and this pattern is absent from alcohol-related cases. Interestingly, non-alcohol related cases perpetrated on England match days or after and England match, and alcohol-related cases on an England draw day are more likely to be reported sooner. \TM{I think this is a really interesting result! Potentially a nice link back to the Card and Lee results.}
 
 Finally, we are interested in whether an England match day transforms previously non-alcohol related incidents into alcohol-related ones. To explore this question, we ran a logistic regression on the subset of repeated cases, controlling for the type of the previous case (alcohol/non-alcohol related). We find that an England win day increases the likelihood of an alcohol-related case occurring, irrespective of whether the previous case was alcohol-related or not (see Table \ref{alctrans} in the Appendix).
 
